chore: migrate to SequencedSet
# Conflicts:
#	src/main/java/ai/timefold/solver/benchmarks/examples/conferencescheduling/domain/Speaker.java
#	src/main/java/ai/timefold/solver/benchmarks/examples/conferencescheduling/domain/Talk.java
#	src/main/java/ai/timefold/solver/benchmarks/examples/conferencescheduling/persistence/ConferenceSchedulingGenerator.java
#	src/test/java/ai/timefold/solver/benchmarks/examples/conferencescheduling/score/ConferenceSchedulingConstraintProviderTest.java